Fix alignment

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -9,7 +9,7 @@
     padding: 3rem;
     height: 23rem;
     overflow-y: hidden;
-    border-radius: 1rem;
+    border-radius: .5rem;
     box-shadow: 0 5px 126px 20px rgb(163 165 174 / 18%);
     background-color: v.$white;
 
