--- a/scss/layouts/_card-section.scss
+++ b/scss/layouts/_card-section.scss
@@ -12,7 +12,7 @@
 
     @include m.breakpoint-sm() {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(15rem, 30rem));
+        grid-template-columns: repeat(auto-fill, minmax(15rem, 40rem));
         grid-template-rows: 23rem 23rem;
         grid-gap: 2.5rem;
         max-width: initial;
@@ -24,8 +24,11 @@
     }
 
     @include m.breakpoint-lg() {
-        grid-template-columns: repeat(3, minmax(15rem, 30rem));
+        grid-template-columns: repeat(3, minmax(15rem, 40rem));
         grid-template-rows: initial;
         align-items: center;
+        margin-top: 0;
+        margin-right: 2.5rem;
+        margin-left: 2.5rem;
     }
 }
